--- a/ngGearSilo/src/app/components/profile/profile.component.html
+++ b/ngGearSilo/src/app/components/profile/profile.component.html
@@ -268,26 +268,19 @@
                         <span class="input-group-text" style="width: 117px"
                           id="inputGroup-sizing-default">Category</span>
                       </div>
-                      <select placeholder="Category" class="form-control" [(ngModel)]="newGear.categories" multiple
-                        searchable>
-                        <option>All</option>
-                        <option>Mountain Biking</option>
-                        <option>Skating</option>
-                        <option>Surf</option>
-                        <option>Hiking</option>
-                        <option>Biking</option>
-                        <option>Kayaking</option>
-                        <option>Water Sports</option>
-                        <option>Rock Climbing</option>
-                        <option>Skiing</option>
-                        <option>Snowboarding</option>
-                        <option>Freefalling</option>
-                        <option>Wakeboarding</option>
-                        <option>Snow</option>
-                        <option>Water</option>
-                        <option>Mountain</option>
-                        <option>Sky</option>
-                        <option>Winter</option>
+                      <select class="form-control" [(ngModel)]="newGear.categories" multiple>
+                        <option [ngValue]='null' disable>(Choose a Category - ctrl+select for multiple)</option>
+                        <option value='Skating'>Skating</option>
+                        <option value='Surf'>Surf</option>
+                        <option value='Hiking'>Hiking</option>
+                        <option value='Biking'>Biking</option>
+                        <option value='Water Sports'>Water Sports</option>
+                        <option value='Rock Climbing'>Rock Climbing</option>
+                        <option value='Skiing'>Skiing</option>
+                        <option value='Snowboarding'>Snowboarding</option>
+                        <option value='Freefalling'>Freefalling</option>
+                        <option value='Snow'>Snow</option>
+                        <option value='Sports'>Sports</option>
                       </select>
                     </div> -->
 
