--- a/ngGearSilo/src/app/components/gear-list/gear-list.component.css
+++ b/ngGearSilo/src/app/components/gear-list/gear-list.component.css
@@ -271,11 +271,11 @@ h4 {
 
 .slider {
   -webkit-appearance: none;
-  width: 25%;
+  width: 35%;
   height: 15px;
   border-radius: 5px;
   margin-top: 105px;
-  margin-left: 180px;
+  margin-left: 210px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
@@ -341,3 +341,11 @@ input[type="range"] + .thumb {
 input[type="range"] + .thumb.active {
   /* bottom: -20px !important; */
 }
+
+
+.topOfPage {
+  position: fixed;
+  margin-top: 730px;
+}
+
+
